git-svn-id: svn://svn.r-forge.r-project.org/svnroot/imad@28 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/imad/DESCRIPTION
+++ b/pkg/imad/DESCRIPTION
@@ -19,3 +19,6 @@ Collate:
     'Rdggev.R'
     'RADCAL.R'
     'build_raster_filename.R'
+    'brick_to_stack.R'
+    'layerStats_hpc.R'
+    'raster_to_list.R'
