intermediate updates to accelerate HPC
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/imad@34 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/imad/DESCRIPTION
+++ b/pkg/imad/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 0.3
 Date: 1-May-2012
 Depends:
     raster (>= 1.9-91),
-    R (>= 2.11.0)
+    R (>= 2.11.0),
+    rasterhpc
 Author: Mort Canty (original version) & Jonathan A. Greenberg (R port) & Carlos
     Ramirez
 Maintainer: Jonathan A. Greenberg <imad@estarcion.net>
