--- a/pkg/imad/NAMESPACE
+++ b/pkg/imad/NAMESPACE
@@ -1,5 +1,14 @@
+export(brick_to_stack)
 export(build_raster_filename)
+export(calc_hpc)
+export(cluster_stack_mapply)
 export(extract_overlap_rasters)
 export(iMad)
+export(layerStats_hpc)
+export(layerStats_hpc_mean)
+export(layerStats_hpc_sum)
+export(layerStats_hpc_weighted.cov)
+export(mask_hpc)
 export(RADCAL)
+export(raster_to_list)
 export(Rdggev)
