git-svn-id: svn://svn.r-forge.r-project.org/svnroot/imad@42 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/imad/DESCRIPTION
+++ b/pkg/imad/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: imad
 Type: Package
 Title: Iteratively Re-weighted Multivariate Alteration Detection (iMAD)
-Version: 0.4
+Version: 0.4-1
 Date: 5-June-2012
 Depends:
     raster (>= 1.9-91),
