git-svn-id: svn://svn.r-forge.r-project.org/svnroot/imad@75 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/imad/NAMESPACE
+++ b/pkg/imad/NAMESPACE
@@ -1,3 +1,5 @@
+export(RADCAL)
+export(Rdggev)
 export(brick_to_stack)
 export(build_raster_filename)
 export(calc_hpc)
@@ -9,7 +11,6 @@ export(layerStats_hpc_mean)
 export(layerStats_hpc_sum)
 export(layerStats_hpc_weighted.cov)
 export(mask_hpc)
-export(RADCAL)
 export(raster_to_list)
-export(Rdggev)
+export(setValues_hpc)
 export(spectral_subset)
